--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -31,7 +31,7 @@
 
         <nav class="header__nav" role="navigation">
           <ul class="header__menu list-unstyled" role="list">
-            {%- for link in menu.links -%}
+            {%- for link in linklists['main-menu-1'].links -%}
               <li class="header__menu-item">
                 <a
                   href="{{ link.url }}"
@@ -78,7 +78,7 @@
       </div>
       <nav class="mobile-menu__nav" role="navigation">
         <ul class="mobile-menu__list list-unstyled" role="list">
-          {%- for link in menu.links -%}
+          {%- for link in linklists['main-menu-1'].links -%}
             <li class="mobile-menu__item">
               <a
                 href="{{ link.url }}"
