--- a/sections/featured-collections.liquid
+++ b/sections/featured-collections.liquid
@@ -16,7 +16,7 @@
             assign collection = collections[block.settings.collection]
             assign custom_title = block.settings.title
           -%}
-          
+
           <div class="featured-collections__item" {{ block.shopify_attributes }}>
             {%- if collection != blank -%}
               <a href="{{ collection.url }}" class="featured-collection-card">
@@ -35,8 +35,7 @@
                       alt="{{ collection.image.alt | escape }}"
                       loading="lazy"
                       width="{{ collection.image.width }}"
-                      height="{{ collection.image.height }}"
-                    >
+                      height="{{ collection.image.height }}">
                   </div>
                 {%- elsif collection.products.first and collection.products.first.featured_image -%}
                   <div class="featured-collection-card__image">
@@ -52,11 +51,10 @@
                       alt="{{ collection.products.first.featured_image.alt | escape }}"
                       loading="lazy"
                       width="{{ collection.products.first.featured_image.width }}"
-                      height="{{ collection.products.first.featured_image.height }}"
-                    >
+                      height="{{ collection.products.first.featured_image.height }}">
                   </div>
                 {%- endif -%}
-                
+
                 <div class="featured-collection-card__content">
                   <h3 class="featured-collection-card__title">
                     {%- if custom_title != blank -%}
@@ -94,62 +92,64 @@
 </div>
 
 {% schema %}
-{
-  "name": "Featured Collections",
-  "tag": "section",
-  "class": "section-featured-collections",
-  "max_blocks": 6,
-  "settings": [
-    {
-      "type": "text",
-      "id": "heading",
-      "label": "Heading",
-      "default": "Shop by Category"
-    },
-    {
-      "type": "range",
-      "id": "collections_per_row",
-      "min": 2,
-      "max": 4,
-      "step": 1,
-      "label": "Collections per row",
-      "default": 3
-    }
-  ],
-  "blocks": [
-    {
-      "type": "collection",
-      "name": "Collection",
-      "settings": [
-        {
-          "type": "collection",
-          "id": "collection",
-          "label": "Collection"
-        },
-        {
-          "type": "text",
-          "id": "title",
-          "label": "Custom title",
-          "info": "Leave blank to use collection title"
-        }
-      ]
-    }
-  ],
-  "presets": [
-    {
-      "name": "Featured Collections",
-      "blocks": [
-        {
-          "type": "collection"
-        },
-        {
-          "type": "collection"
-        },
-        {
-          "type": "collection"
-        }
-      ]
-    }
-  ]
-}
+  {
+    "name": "Featured Collections",
+    "tag": "section",
+    "class": "section-featured-collections",
+    "max_blocks": 6,
+    "settings": [
+      {
+        "type": "text",
+        "id": "heading",
+        "label": "Heading",
+        "default": "Shop by Category"
+      }, {
+        "type": "range",
+        "id": "collections_per_row",
+        "min": 2,
+        "max": 4,
+        "step": 1,
+        "label": "Collections per row",
+        "default": 3
+      }, {
+        "type": "checkbox",
+        "id": "enable_quick_add",
+        "label": "Enable quick add to cart",
+        "default": true,
+        "info": "Show quick add button on product cards when hovering"
+      }
+    ],
+    "blocks": [
+      {
+        "type": "collection",
+        "name": "Collection",
+        "settings": [
+          {
+            "type": "collection",
+            "id": "collection",
+            "label": "Collection"
+          }, {
+            "type": "text",
+            "id": "title",
+            "label": "Custom title",
+            "info": "Leave blank to use collection title"
+          }
+        ]
+      }
+    ],
+    "presets": [
+      {
+        "name": "Featured Collections",
+        "blocks": [
+          {
+            "type": "collection"
+          }, {
+            "type": "collection"
+          }, {
+            "type": "collection"
+          }
+        ]
+      }
+    ]
+  }
 {% endschema %}
