--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -16,13 +16,15 @@
       {%- if collection != blank and collection.products.size > 0 -%}
         {%- for product in collection.products limit: products_to_show -%}
           <div class="featured-products__item">
-            {% render 'product-card', product: product %}
+            {% render 'product-card'
+              , product: product %}
           </div>
         {%- endfor -%}
       {%- else -%}
         {%- for i in (1..products_to_show) -%}
           <div class="featured-products__item">
-            {% render 'product-card', product: blank %}
+            {% render 'product-card'
+              , product: blank %}
           </div>
         {%- endfor -%}
       {%- endif -%}
@@ -39,67 +41,70 @@
 </div>
 
 {% schema %}
-{
-  "name": "Featured Products",
-  "tag": "section",
-  "class": "section-featured-products",
-  "settings": [
-    {
-      "type": "text",
-      "id": "heading",
-      "label": "Heading",
-      "default": "Best Sellers"
-    },
-    {
-      "type": "collection",
-      "id": "collection",
-      "label": "Collection"
-    },
-    {
-      "type": "range",
-      "id": "products_to_show",
-      "min": 2,
-      "max": 12,
-      "step": 1,
-      "label": "Products to show",
-      "default": 4
-    },
-    {
-      "type": "range",
-      "id": "columns_desktop",
-      "min": 2,
-      "max": 5,
-      "step": 1,
-      "label": "Number of columns on desktop",
-      "default": 4
-    },
-    {
-      "type": "select",
-      "id": "columns_mobile",
-      "label": "Number of columns on mobile",
-      "options": [
-        {
-          "value": "1",
-          "label": "1 column"
-        },
-        {
-          "value": "2",
-          "label": "2 columns"
-        }
-      ],
-      "default": "2"
-    },
-    {
-      "type": "checkbox",
-      "id": "show_view_all",
-      "label": "Show 'View all' button",
-      "default": true
-    }
-  ],
-  "presets": [
-    {
-      "name": "Featured Products"
-    }
-  ]
-}
+  {
+    "name": "Featured Products",
+    "tag": "section",
+    "class": "section-featured-products",
+    "settings": [
+      {
+        "type": "text",
+        "id": "heading",
+        "label": "Heading",
+        "default": "Best Sellers"
+      },
+      {
+        "type": "collection",
+        "id": "collection",
+        "label": "Collection"
+      },
+      {
+        "type": "range",
+        "id": "products_to_show",
+        "min": 2,
+        "max": 12,
+        "step": 1,
+        "label": "Products to show",
+        "default": 4
+      },
+      {
+        "type": "range",
+        "id": "columns_desktop",
+        "min": 2,
+        "max": 5,
+        "step": 1,
+        "label": "Number of columns on desktop",
+        "default": 4
+      }, {
+        "type": "select",
+        "id": "columns_mobile",
+        "label": "Number of columns on mobile",
+        "options": [
+          {
+            "value": "1",
+            "label": "1 column"
+          }, {
+            "value": "2",
+            "label": "2 columns"
+          }
+        ],
+        "default": "2"
+      }, {
+        "type": "checkbox",
+        "id": "show_view_all",
+        "label": "Show 'View all' button",
+        "default": true
+      }, {
+        "type": "checkbox",
+        "id": "enable_quick_add",
+        "label": "Enable quick add to cart",
+        "default": true,
+        "info": "Show quick add button on product cards when hovering"
+      }
+    ],
+    "presets": [
+      {
+        "name": "Featured Products"
+      }
+    ]
+  }
 {% endschema %}
